<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_activity_maps"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/title_activity_change_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="always" />

</menu>
